# DES_Head-Unit

./: .gitignore  .gitmodules  README.md
Commonapi/fidl/: status.fdepl  status.fidl
Commonapi/generator/core-generator/configuration/org.eclipse.core.runtime/.manager/: .fileTable.7  .fileTable.8
Commonapi/generator/core-generator/configuration/org.eclipse.osgi/: framework.info.20
Commonapi/generator/core-generator/configuration/org.eclipse.osgi/.manager/: .fileTable.20  .fileTable.21
Commonapi/generator/someip-generator/configuration/org.eclipse.core.runtime/.manager/: .fileTable.7
Commonapi/generator/someip-generator/configuration/org.eclipse.osgi/: framework.info.25
Commonapi/generator/someip-generator/configuration/org.eclipse.osgi/.manager/: .fileTable.25  .fileTable.26
Head_Unit/: CMakeLists.txt
Head_Unit/src/: GearSelectionServer.cpp  GearSelectionServer.hpp  GearSelectionStubImpl.cpp  GearSelectionStubImpl.hpp  main.cpp
Head_Unit/src-gen-gear/v1/commonapi/: GearSelectionProxyBase.hpp  GearSelectionSomeIPDeployment.cpp  GearSelectionSomeIPProxy.cpp
Head_Unit/src/qml/: main.qml
Instrument_Cluster/: CMakeLists.txt
Instrument_Cluster/src/: GearSelectionClient.cpp  GearSelectionClient.hpp  SpeedStatusClient.cpp  SpeedStatusClient.hpp  main.cpp
Instrument_Cluster/src-gen-cluster/v1/commonapi/: GearSelection.hpp  GearSelectionProxyBase.hpp  GearSelectionSomeIPProxy.cpp  GearSelectionSomeIPProxy.hpp  GearSelectionSomeIPStubAdapter.cpp  GearSelectionSomeIPStubAdapter.hpp  GearSelectionStub.hpp  GearSelectionStubDefault.hpp  SpeedStatusProxyBase.hpp  SpeedStatusSomeIPProxy.cpp  SpeedStatusSomeIPProxy.hpp  SpeedStatusSomeIPStubAdapter.cpp  SpeedStatusSomeIPStubAdapter.hpp  SpeedStatusStub.hpp  SpeedStatusStubDefault.hpp
Instrument_Cluster/src-gen-gear/v1/commonapi/: GearSelectionProxy.hpp  GearSelectionSomeIPDeployment.hpp  GearSelectionSomeIPProxy.hpp  GearSelectionSomeIPStubAdapter.hpp  GearSelectionStub.hpp  GearSelectionStubDefault.hpp
Instrument_Cluster/src/qml/: main.qml
Sender/: CMakeLists.txt  CanReceive.cpp  canreceiver  main.cpp
Sender/src/: CanReceive.cpp  CanReceive.hpp  SpeedServer.cpp  SpeedServer.hpp  SpeedStubImpl.cpp  SpeedStubImpl.hpp  main.cpp
Sender/src-gen-speed/v1/commonapi/: SpeedStatusProxy.hpp  SpeedStatusProxyBase.hpp  SpeedStatusSomeIPProxy.cpp  SpeedStatusSomeIPProxy.hpp  SpeedStatusSomeIPStubAdapter.hpp  SpeedStatusStub.hpp  SpeedStatusStubDefault.hpp
VirtualArduino/: CanSender.cpp  CanSender.hpp  build.sh  cansender  main.cpp
arduino/: rpm_sender.ino
fidl/: gear.fdepl  gear.fidl
generator/core-generator/configuration/org.eclipse.osgi/: framework.info.15
generator/core-generator/configuration/org.eclipse.osgi/.manager/: .fileTable.15  .fileTable.16
generator/someip-generator/configuration/org.eclipse.core.runtime/.manager/: .fileTable.8
generator/someip-generator/configuration/org.eclipse.osgi/: framework.info.19
generator/someip-generator/configuration/org.eclipse.osgi/.manager/: .fileTable.19  .fileTable.20
src-gen-gear/v1/commonapi/: GearSelectionSomeIPProxy.cpp  GearSelectionSomeIPStubAdapter.cpp
